fix: removed not needed swagger urls
