# docs/swagger.json
@@ -85,42 +85,6 @@
                 "responses": {}
             }
         },
-        "/partners": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Partners"
-                ],
-                "responses": {}
-            }
-        },
-        "/partners/partner": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Partners"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/shops/near-shops": {
             "get": {
                 "consumes": [
@@ -142,28 +106,6 @@
                     {
                         "type": "number",
                         "name": "long",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/shops/partner-shops": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Partners"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "name": "partnerId",
                         "in": "query",
                         "required": true
                     }
